[gd_scene load_steps=62 format=4 uid="uid://rh4dwjm2rpnq"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_m5chb"]
[ext_resource type="Texture2D" uid="uid://8b5yxp8a2bae" path="res://Sprites/PolyBlocks/PolyBlocksBig.png" id="2_sgql1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81db1"]
bg_color = Color(0, 0.501961, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_155h8"]
bg_color = Color(0, 0.501961, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guojr"]
bg_color = Color(0, 0.501961, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gi8y4"]
texture = ExtResource("2_sgql1")
texture_region_size = Vector2i(30, 30)
7:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
7:1/0 = 0
16:1/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
16:2/0 = 0
7:3/0 = 0
16:3/0 = 0
6:5/0 = 0
9:5/0 = 0
13:5/0 = 0
14:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
13:6/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
13:7/0 = 0
3:9/0 = 0
6:9/0 = 0
14:9/0 = 0
15:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
6:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
15:10/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
15:11/0 = 0
5:13/0 = 0
14:13/0 = 0
18:13/0 = 0
19:13/0 = 0
1:14/0 = 0
2:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
14:14/0 = 0
15:14/0 = 0
17:14/0 = 0
18:14/0 = 0
1:15/0 = 0
2:15/0 = 0
6:15/0 = 0
9:15/0 = 0
10:15/0 = 0
15:15/0 = 0
6:17/0 = 0
10:17/0 = 0
14:17/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
5:18/0 = 0
6:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
14:18/0 = 0
15:18/0 = 0
2:19/0 = 0
6:19/0 = 0
14:19/0 = 0
6:21/0 = 0
9:21/0 = 0
10:21/0 = 0
15:21/0 = 0
1:22/0 = 0
2:22/0 = 0
5:22/0 = 0
6:22/0 = 0
10:22/0 = 0
11:22/0 = 0
14:22/0 = 0
15:22/0 = 0
2:23/0 = 0
3:23/0 = 0
5:23/0 = 0
14:23/0 = 0
6:25/0 = 0
9:25/0 = 0
10:25/0 = 0
12:25/0 = 0
13:25/0 = 0
16:25/0 = 0
18:25/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
6:26/0 = 0
9:26/0 = 0
13:26/0 = 0
15:26/0 = 0
16:26/0 = 0
18:26/0 = 0
19:26/0 = 0
6:27/0 = 0
9:28/0 = 0
10:28/0 = 0
13:28/0 = 0
18:28/0 = 0
13:29/0 = 0
15:29/0 = 0
16:29/0 = 0
18:29/0 = 0

[sub_resource type="TileSet" id="TileSet_lvsig"]
tile_size = Vector2i(30, 30)
sources/1 = SubResource("TileSetAtlasSource_gi8y4")

[sub_resource type="AtlasTexture" id="AtlasTexture_666f6"]
atlas = ExtResource("2_sgql1")
region = Rect2(450, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqjbe"]
atlas = ExtResource("2_sgql1")
region = Rect2(300, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfnsj"]
atlas = ExtResource("2_sgql1")
region = Rect2(150, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n2f7"]
atlas = ExtResource("2_sgql1")
region = Rect2(0, 0, 120, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_udmkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_666f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqjbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfnsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n2f7")
}],
"loop": true,
"name": &"I-rotate",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mdovq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_666f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqjbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfnsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n2f7")
}],
"loop": true,
"name": &"I-rotate",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h4pyr"]
atlas = ExtResource("2_sgql1")
region = Rect2(360, 150, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv36d"]
atlas = ExtResource("2_sgql1")
region = Rect2(270, 150, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua8fv"]
atlas = ExtResource("2_sgql1")
region = Rect2(150, 150, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb8k1"]
atlas = ExtResource("2_sgql1")
region = Rect2(30, 150, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_0kjf6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4pyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv36d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua8fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb8k1")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_hxila"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4pyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv36d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua8fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb8k1")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ogk3r"]
atlas = ExtResource("2_sgql1")
region = Rect2(30, 270, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4xuq"]
atlas = ExtResource("2_sgql1")
region = Rect2(150, 270, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_sedm3"]
atlas = ExtResource("2_sgql1")
region = Rect2(300, 270, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_l367o"]
atlas = ExtResource("2_sgql1")
region = Rect2(420, 270, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_33g54"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogk3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4xuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sedm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l367o")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bvntt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogk3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4xuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sedm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l367o")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3yk6m"]
atlas = ExtResource("2_sgql1")
region = Rect2(30, 420, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_1vwj7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yk6m")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1jiid"]
atlas = ExtResource("2_sgql1")
region = Rect2(270, 390, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkrnw"]
atlas = ExtResource("2_sgql1")
region = Rect2(390, 390, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g04l"]
atlas = ExtResource("2_sgql1")
region = Rect2(510, 390, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_62w7j"]
atlas = ExtResource("2_sgql1")
region = Rect2(150, 390, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_qksfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jiid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkrnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g04l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62w7j")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ame4u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jiid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkrnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g04l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62w7j")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7t8an"]
atlas = ExtResource("2_sgql1")
region = Rect2(390, 510, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocemm"]
atlas = ExtResource("2_sgql1")
region = Rect2(270, 510, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_08h6g"]
atlas = ExtResource("2_sgql1")
region = Rect2(150, 510, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8j2s"]
atlas = ExtResource("2_sgql1")
region = Rect2(30, 510, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_ffc85"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocemm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08h6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8j2s")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ngk1e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocemm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08h6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8j2s")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bk6uv"]
atlas = ExtResource("2_sgql1")
region = Rect2(390, 630, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pkox"]
atlas = ExtResource("2_sgql1")
region = Rect2(270, 630, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_uusw3"]
atlas = ExtResource("2_sgql1")
region = Rect2(150, 630, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m83g"]
atlas = ExtResource("2_sgql1")
region = Rect2(30, 630, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_d84xd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk6uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pkox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uusw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m83g")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jag5n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk6uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pkox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uusw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m83g")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jfi1n"]
atlas = ExtResource("2_sgql1")
region = Rect2(150, 750, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhkqb"]
atlas = ExtResource("2_sgql1")
region = Rect2(30, 750, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_2kpmm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfi1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhkqb")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_r435t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfi1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhkqb")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y0ebi"]
atlas = ExtResource("2_sgql1")
region = Rect2(540, 750, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_jffd5"]
atlas = ExtResource("2_sgql1")
region = Rect2(450, 750, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_segde"]
atlas = ExtResource("2_sgql1")
region = Rect2(360, 750, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfg7j"]
atlas = ExtResource("2_sgql1")
region = Rect2(270, 750, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_fewmc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0ebi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jffd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_segde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfg7j")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nqodo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0ebi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jffd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_segde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfg7j")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_elpfr"]
atlas = ExtResource("2_sgql1")
region = Rect2(270, 840, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb7l5"]
atlas = ExtResource("2_sgql1")
region = Rect2(360, 840, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_otb00"]
atlas = ExtResource("2_sgql1")
region = Rect2(450, 840, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycnai"]
atlas = ExtResource("2_sgql1")
region = Rect2(540, 840, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_epb81"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elpfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb7l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otb00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycnai")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_a6j00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elpfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb7l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otb00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycnai")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_m5chb")

[node name="PlayButton" type="Button" parent="."]
top_level = true
offset_left = 760.0
offset_top = 456.0
offset_right = 1160.0
offset_bottom = 546.0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_81db1")
text = "PLAY GAME"

[node name="ExperiMode" type="Button" parent="."]
top_level = true
offset_left = 760.0
offset_top = 568.0
offset_right = 1160.0
offset_bottom = 658.0
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_155h8")
text = "Play Experimenter's Mode"

[node name="PlayExpMode" type="ConfirmationDialog" parent="ExperiMode"]
process_mode = 3
auto_translate_mode = 1
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
title = "Play Experimenter's Mode?"
initial_position = 1
size = Vector2i(800, 320)
max_size = Vector2i(1920, 1080)
ok_button_text = "Confirm"
dialog_text = "NOTE: Experimenter's mode contains features that are either works-in-progress or intended for developers. As a result, some features may be buggy or act crazy. Furthermore, NO GAME played in this mode will be officially saved on record (so don't play your record-setting game here!)."
dialog_autowrap = true
cancel_button_text = "Go Back"

[node name="Settings" type="Button" parent="."]
top_level = true
offset_left = 760.0
offset_top = 680.0
offset_right = 1160.0
offset_bottom = 769.0
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_guojr")
text = "Settings"

[node name="Layer1" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAQAAgAAQAGAAkAAAARAAgAAQAGAAkAAAASAAgAAQAJABwAAAAWAAgAAQACAAEAAAAXAAgAAQACAAEAAAAaAAQAAQADAAcAAAAaAAYAAQADAAcAAAAaAAgAAQAJABwAAAAbAAQAAQADAAcAAAAbAAYAAQAJABwAAAAcAAQAAQAGAAkAAAAcAAYAAQAJABwAAAAfAAYAAQABAAEAAAAgAAQAAQABAAYAAAAgAAYAAQAJABwAAAAhAAQAAQABAAYAAAAhAAYAAQAJABwAAAAkAAQAAQAAAAEAAAAkAAYAAQAAAAEAAAAmAAgAAQADABoAAAArAAYAAQACAAEAAAALAAQAAQAAAAEAAAALAAUAAQAAAAEAAAALAAYAAQAAAAEAAAALAAcAAQAAAAEAAAAMAAMAAQABABoAAAAMAAgAAQABABoAAAANAAMAAQABABoAAAANAAgAAQABABoAAAAOAAMAAQABABoAAAAOAAgAAQABABoAAAAQAAQAAQAJABwAAAAQAAUAAQAJABwAAAAQAAYAAQAGAAkAAAAQAAcAAQAGAAkAAAATAAgAAQAJABwAAAAVAAUAAQACABIAAAAVAAYAAQACABIAAAAVAAcAAQACABIAAAAWAAQAAQACAAEAAAAWAAYAAQACABIAAAAXAAQAAQACAAEAAAAXAAYAAQAJABwAAAAYAAQAAQACAAEAAAAYAAYAAQAJABwAAAAYAAgAAQACAAEAAAAaAAUAAQADAAcAAAAaAAcAAQAJABwAAAAdAAQAAQAGAAkAAAAdAAUAAQAGAAkAAAAdAAYAAQAGAAkAAAAdAAcAAQAJABwAAAAdAAgAAQAJABwAAAAfAAUAAQABAAEAAAAfAAcAAQABAAEAAAAfAAgAAQABAAEAAAAiAAQAAQABAAYAAAAiAAUAAQABAAYAAAAiAAcAAQAJABwAAAAiAAgAAQAJABwAAAAkAAMAAQADABoAAAAkAAUAAQAAAAEAAAAkAAcAAQAAAAEAAAAkAAgAAQADABoAAAAlAAMAAQADABoAAAAlAAgAAQADABoAAAAmAAMAAQADABoAAAAnAAQAAQAAAAEAAAAnAAUAAQAAAAEAAAAnAAYAAQAAAAEAAAAnAAcAAQAAAAEAAAApAAYAAQACAAEAAAAqAAYAAQACAAEAAAAVAAgAAQACAAEAAAAVAAQAAQACAAEAAAAuAAMAAQAGABkAAAAuAAgAAQAGABkAAAAvAAMAAQAGABkAAAAvAAgAAQAGABkAAAAyAAMAAQAOABIAAAAzAAMAAQAOABIAAAAvAAQAAQAQAAIAAAAvAAUAAQAQAAIAAAAvAAYAAQAQAAIAAAAvAAcAAQAQAAIAAAAwAAMAAQAGABkAAAAwAAgAAQAGABkAAAAzAAQAAQAOABIAAAAzAAUAAQAQAAIAAAAzAAYAAQAQAAIAAAAzAAcAAQAQAAIAAAAzAAgAAQAQAAIAAAA0AAMAAQAOABIAAAAsAAYAAQACAAEAAAA=")
tile_set = SubResource("TileSet_lvsig")

[node name="I" type="AnimatedSprite2D" parent="."]
position = Vector2(512, 512)
sprite_frames = SubResource("SpriteFrames_udmkf")
animation = &"I-rotate"
autoplay = "I-rotate"
frame = 2
frame_progress = 0.917358

[node name="IR" type="AnimatedSprite2D" parent="."]
position = Vector2(1408, 512)
sprite_frames = SubResource("SpriteFrames_mdovq")
animation = &"I-rotate"
autoplay = "I-rotate"
frame = 2
frame_progress = 0.42447

[node name="J" type="AnimatedSprite2D" parent="."]
position = Vector2(312, 520)
sprite_frames = SubResource("SpriteFrames_0kjf6")
autoplay = "default"
frame = 3
frame_progress = 0.429329

[node name="JR" type="AnimatedSprite2D" parent="."]
position = Vector2(1592, 504)
sprite_frames = SubResource("SpriteFrames_hxila")
autoplay = "default"
frame = 1
frame_progress = 0.0724171

[node name="L" type="AnimatedSprite2D" parent="."]
position = Vector2(128, 496)
sprite_frames = SubResource("SpriteFrames_33g54")
autoplay = "default"
frame = 3
frame_progress = 0.528748

[node name="LR" type="AnimatedSprite2D" parent="."]
position = Vector2(1760, 504)
sprite_frames = SubResource("SpriteFrames_bvntt")
autoplay = "default"
frame = 2
frame_progress = 0.57374

[node name="O" type="AnimatedSprite2D" parent="."]
position = Vector2(128, 648)
sprite_frames = SubResource("SpriteFrames_1vwj7")
autoplay = "default"
frame_progress = 0.552801

[node name="OR" type="AnimatedSprite2D" parent="."]
position = Vector2(1760, 640)
sprite_frames = SubResource("SpriteFrames_1vwj7")
autoplay = "default"
frame_progress = 0.736824

[node name="S" type="AnimatedSprite2D" parent="."]
position = Vector2(128, 800)
sprite_frames = SubResource("SpriteFrames_qksfo")
autoplay = "default"
frame_progress = 0.56326

[node name="SR" type="AnimatedSprite2D" parent="."]
position = Vector2(1760, 800)
sprite_frames = SubResource("SpriteFrames_ame4u")
autoplay = "default"
frame = 3
frame_progress = 0.916086

[node name="T" type="AnimatedSprite2D" parent="."]
position = Vector2(136, 968)
sprite_frames = SubResource("SpriteFrames_ffc85")
autoplay = "default"
frame = 2
frame_progress = 0.148023

[node name="TR" type="AnimatedSprite2D" parent="."]
position = Vector2(1760, 968)
sprite_frames = SubResource("SpriteFrames_ngk1e")
autoplay = "default"
frame_progress = 0.651479

[node name="Z" type="AnimatedSprite2D" parent="."]
position = Vector2(328, 968)
sprite_frames = SubResource("SpriteFrames_d84xd")
autoplay = "default"
frame = 1
frame_progress = 0.278149

[node name="ZR" type="AnimatedSprite2D" parent="."]
position = Vector2(1592, 968)
sprite_frames = SubResource("SpriteFrames_jag5n")
autoplay = "default"
frame_progress = 0.767075

[node name="Tri" type="AnimatedSprite2D" parent="."]
position = Vector2(512, 968)
sprite_frames = SubResource("SpriteFrames_2kpmm")
autoplay = "default"
frame = 1
frame_progress = 0.386342

[node name="TriR" type="AnimatedSprite2D" parent="."]
position = Vector2(1408, 968)
sprite_frames = SubResource("SpriteFrames_r435t")
autoplay = "default"
frame = 1
frame_progress = 0.840955

[node name="TriV" type="AnimatedSprite2D" parent="."]
position = Vector2(696, 976)
sprite_frames = SubResource("SpriteFrames_fewmc")
autoplay = "default"
frame = 1
frame_progress = 0.54269

[node name="TriVR" type="AnimatedSprite2D" parent="."]
position = Vector2(1216, 976)
sprite_frames = SubResource("SpriteFrames_nqodo")
autoplay = "default"
frame = 2
frame_progress = 0.849033

[node name="Duo" type="AnimatedSprite2D" parent="."]
position = Vector2(848, 976)
sprite_frames = SubResource("SpriteFrames_epb81")
autoplay = "default"
frame = 1
frame_progress = 0.859392

[node name="DuoR" type="AnimatedSprite2D" parent="."]
position = Vector2(1032, 976)
sprite_frames = SubResource("SpriteFrames_a6j00")
autoplay = "default"
frame = 2
frame_progress = 0.00796683

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ExperiMode" to="." method="_on_experi_mode_pressed"]
[connection signal="confirmed" from="ExperiMode/PlayExpMode" to="." method="_on_play_exp_mode_confirmed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
